# Leaflet-ebook-reader

./: .gitignore  index.html  package.json  pnpm-lock.yaml
docs/: ANDROID.md  ARCHITECTURE.md  DESIGN.md  PROGRESS.md  README.md  SETUP.md  architecture.md  design-notes.md  progress.md  setup.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/components/: BookBody.tsx  BookCover.tsx  Button.tsx  ConfirmDialog.tsx  ContextMenu.tsx  DesktopReader.tsx  DocxManageView.tsx  EditBookModal.tsx  HighlightActionPopover.tsx  Icon.tsx  ImportChoiceModal.tsx  ImportProgress.tsx  Library.tsx  MobileReader.tsx  MobileSheet.tsx  PaginatedView.tsx  SelectionPopover.tsx  Toast.tsx  VirtualList.tsx
src/docx/: buildEpub.ts  detectDirection.ts  import.ts  mammoth.d.ts  splitChapters.ts  stage.ts
src/epub/: parser.ts  types.ts
src/hooks/: useTweaks.ts
src/lib/: selectionAnchor.ts
src/panels/: BookmarksPanel.tsx  HighlightsPanel.tsx  PanelShell.tsx  ProgressOverlay.tsx  SettingsPanel.tsx  TOCPanel.tsx
src/store/: importProgress.ts  library.ts  palette.ts
src/styles/: global.css  tokens.ts
src/types/: reader.ts
