[package]
name = "leaflet"
version = "0.1.0"
description = "Leaflet — a warm, cross-platform e-book reader"
authors = ["Leaflet Team"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "leaflet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Size-optimized release profile. The Android APK ships the Rust core as a
# .so per ABI, so opt-level "z" + LTO + strip is what brings the install
# size down from hundreds of MB (debug) to ~tens of MB.
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

